syntax = "proto3";

package support;

service CustomerSupportService {
  rpc contactCustomerSupport (stream ChatMessage) returns (stream ChatMessage);
}

message ChatMessage {
  string name = 1;
  string message = 2;
}
